--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ blinker==1.4
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
+#click==7.1.2
 charset-normalizer==2.0.4
-click==7.1.2
 cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
@@ -43,10 +43,12 @@ mistune==0.8.4
 nbclient==0.5.4
 nbconvert==6.1.0
 nbformat==5.1.3
+neo4j==4.3.4
 nest-asyncio==1.5.1
 nltk==3.6.2
 notebook==6.4.3
 numpy==1.21.2
+opencv-python==4.5.3.56
 packaging==21.0
 pandas==1.3.2
 pandocfilters==1.4.3
@@ -64,7 +66,9 @@ pycparser==2.20
 pydeck==0.7.0
 Pygments==2.10.0
 pyparsing==2.4.7
+PyPDF2==1.26.0
 pyrsistent==0.18.0
+pytesseract==0.3.8
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
@@ -88,6 +92,7 @@ traitlets==5.1.0
 tzlocal==3.0
 urllib3==1.26.6
 validators==0.18.2
+watchdog==2.1.5
 wcwidth==0.2.5
 webencodings==0.5.1
 Whoosh==2.7.4
