probleme on click dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ scipy==1.7.1
 seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
-smmap==4.0.0Ò
+smmap==4.0.0
 soupsieve==2.2.1
 streamlit
 terminado==0.12.1
