--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,19 @@ attrs==21.2.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 base58==2.1.0
+beautifulsoup4==4.10.0
 bleach==4.1.0
 blinker==1.4
+boto3
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
+click
 charset-normalizer==2.0.4
 cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
+deep-translator
 defusedxml==0.7.1
 entrypoints==0.3
 gitdb==4.0.7
@@ -40,7 +44,9 @@ mistune==0.8.4
 nbclient==0.5.4
 nbconvert==6.1.0
 nbformat==5.1.3
+neo4j==4.3.4
 nest-asyncio==1.5.1
+nltk==3.6.2
 notebook==6.4.3
 numpy==1.21.2
 opencv-python==4.5.3.56
@@ -63,13 +69,16 @@ Pygments==2.10.0
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyrsistent==0.18.0
+pytesseract==0.3.8
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
+rake-nltk==1.0.4
 regex==2021.8.28
 requests==2.26.0
 s3fs==2021.9.0
 scipy==1.7.1
+seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
 smmap==4.0.0
@@ -80,6 +89,7 @@ testpath==0.5.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
+tqdm==4.62.2
 traitlets==5.1.0
 tzlocal==3.0
 urllib3==1.26.6
@@ -87,4 +97,5 @@ validators==0.18.2
 watchdog==2.1.5
 wcwidth==0.2.5
 webencodings==0.5.1
+Whoosh==2.7.4
 widgetsnbextension==3.5.1
