--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ pytesseract==0.3.8
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
+python-poppler==0.2.2
 rake-nltk==1.0.4
 regex==2021.8.28
 requests==2.26.0
