--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,8 @@ pytesseract==0.3.8
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
-python-poppler==0.2.2
+python-poppler
+python-utils
 rake-nltk==1.0.4
 regex==2021.8.28
 requests==2.26.0
