--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ s3fs==2021.10.1
 pytesseract==0.3.8
 boto3==1.17.106
 Whoosh==2.7.4
-rake-nltk
-deep-translator
+rake-nltk==1.0.6
+deep-translator==1.5.4
+seaborn==0.11.2
