--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ s3fs==2021.10.1
 pytesseract==0.3.8
 boto3==1.17.106
 Whoosh==2.7.4
-rake-nltk
+rake-nltk==1.0.6
 deep-translator==1.5.4
 seaborn==0.11.2
 opencv-python==4.5.3.56
 pdf2image==1.16.0
-nltk==3.6.2
